[metadata]
name = pre_commit_example
version = 1.0.0
description = pre-commit hooks for https://pre-commit.com/
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ComputerConceptsLimited/ccl-pre-commit-hooks.git
author = @johnsondnz
author_email = "" 
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
install_requires =
    flake8
    six
    typing; python_version<"3.5"
    PyYAML>=5.1.2
    netaddr
    ansible-lint
python_requires = >=3.5

[options.entry_points]
console_scripts =
    vlan-duplicates = hooks.vlan_duplicates:main
    vlan-keys = hooks.vlan_keys:main
    vlan-tags-exist = hooks.vlan_tags_exist:main
    ansible-lint = hooks.ansible_lint:main

[options.packages.find]
exclude =
    tests*
    testing*

[bdist_wheel]
universal = True

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
